moved to js select and css for mqs

--- a/css/roblib-responsive-select-menu.css
+++ b/css/roblib-responsive-select-menu.css
@@ -1,1 +1,4 @@
-.roblib-responsive-menu select { display: none; }
+.roblib-responsive-menu-1 select { display: none; }
+.roblib-responsive-menu-2 select { display: none; }
+.roblib-responsive-menu-3 select { display: none; }
+.roblib-responsive-menu-4 select { display: none; }
